# StrokeChat

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  README.md  docker-compose.local.yml  pyproject.toml  render.yaml  vercel.json
backend/: Dockerfile  Dockerfile.runtime  conftest.py  manage.py  pyproject.toml  requirements.txt
backend/apps/biomedparse/: urls.py  views.py
backend/apps/catalog/: models.py  serializers.py  urls.py  views.py
backend/apps/catalog/data/: curated.yaml
backend/apps/catalog/migrations/: 0001_initial.py  0002_alter_catalogmodel_options_catalogmodel_deprecated_and_more.py  (+1 more)
backend/apps/core/: apps.py  crypto.py  db.py  exceptions.py  local_secrets.py  models.py  storage.py
backend/apps/downloads/: apps.py  handlers.py  models.py  serializers.py  urls.py  views.py
backend/apps/gpu_pool/: apps.py
backend/apps/inference/: dispatcher.py  urls.py  views.py
backend/apps/models_registry/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/tasks/: apps.py  models.py
backend/apps/threads/: models.py  serializers.py  urls.py  views.py
backend/apps/vessel_segmentation/: urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: baremetal.py  base.py  cloud.py  desktop.py  development.py  production.py  runtime.py  test.py
backend/tests/: test_catalog.py  test_chat_completions.py  test_downloads.py  test_smoke.py  test_threads.py
desktop/src-tauri/: Cargo.toml  Info.plist  rust-toolchain.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/splash/: index.html
desktop/src-tauri/src/: main.rs  supervisor.rs
(+79 files in other folders)
