[project]
name = "local-llm-backend"
version = "0.0.0"
description = "local_llm Django backend (control plane + runtime profiles)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.6,<5.0",
    "django-environ>=0.11,<0.12",
    "django-storages>=1.14,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "uvicorn[standard]>=0.32,<1.0",
    "cryptography>=43,<46",
    "huggingface-hub>=0.26,<1.0",
    "psutil>=6.0,<8.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "ruamel.yaml>=0.18,<0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
testpaths = ["tests", "apps"]
asyncio_mode = "auto"

[tool.ruff]
extend = "../pyproject.toml"
